--- a/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.css
+++ b/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.css
@@ -78,23 +78,36 @@ tr:nth-child(odd) {
 
 
 /* dinagdag ko dyann sa modal */
-
 .modal {
-  display: none;
   position: fixed;
   z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 450px;
+  height: 500px;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal-content {
+  position: relative;
   background-color: #fefefe;
-  margin: 15% auto;
+  margin: auto;
   padding: 20px;
   border: 1px solid #888;
-
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  overflow-y: auto;
+  z-index:10;
 }
+
+.modal-content span {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  cursor: pointer;
+  color: red;
+}
+
