--- a/src/app/home/monthly-records-infant/monthly-records-infant.component.html
+++ b/src/app/home/monthly-records-infant/monthly-records-infant.component.html
@@ -50,16 +50,13 @@
           </div>
           <div>
             <label for="weightForAge">Weight for Age:</label>
-            <select
+            <input
+              type="text"
               id="weightForAge"
               name="weightForAge"
               [(ngModel)]="monthlyInfantRecordsData.weightForAge"
-            >
-              <option value="SUW">SUW (Severely Underweight)</option>
-              <option value="UW">UW (Underweight)</option>
-              <option value="N">N (Normal)</option>
-              <option value="OW">OW (Overweight)</option>
-            </select>
+              required
+            />
           </div>
           <div>
             <label for="heightOrLengths">Height/Length (H/L):</label>
