--- a/src/app/home/monthly-weight-records-table/monthly-weight-records-table.component.html
+++ b/src/app/home/monthly-weight-records-table/monthly-weight-records-table.component.html
@@ -22,18 +22,13 @@
         </div>
         <div>
           <label for="weightStatus">Weight Status:</label>
-          <select
+          <input
+            type="text"
             id="weightStatus"
             name="weightStatus"
             [(ngModel)]="monthlyWeightRecordsData.weightStatus"
             required
-          >
-            <option value="Severely Underweight">Severely Underweight</option>
-            <option value="Underweight">Underweight</option>
-            <option value="Normal Weight">Normal Weight</option>
-            <option value="OverWeight">OverWeight</option>
-            <option value="Obese">Obese</option>
-          </select>
+          />
         </div>
         <div>
           <label for="dateOfWeighing">Date of Weighing:</label>
