--- a/src/app/home/nutritional-status-summary-weightforheight/nutritional-status-summary-weightforheight.component.html
+++ b/src/app/home/nutritional-status-summary-weightforheight/nutritional-status-summary-weightforheight.component.html
@@ -33,13 +33,78 @@
         <tbody>
           <tr *ngFor="let barangay of barangayData">
             <td>{{ barangay.barangay }}</td>
-            <td>{{ barangay.severelyUnderweight }}</td>
-            <td>{{ barangay.underweight }}</td>
-            <td>{{ barangay.normal }}</td>
-            <td>{{ barangay.obese }}</td>
+            <td
+              (click)="
+                showDetailedInfoByCategory(
+                  barangay.barangay,
+                  'SUW',
+                  barangay.severelyUnderweight
+                )
+              "
+            >
+              {{ barangay.severelyUnderweight }}
+            </td>
+            <td
+              (click)="
+                showDetailedInfoByCategory(
+                  barangay.barangay,
+                  'UW',
+                  barangay.underweight
+                )
+              "
+            >
+              {{ barangay.underweight }}
+            </td>
+            <td
+              (click)="
+                showDetailedInfoByCategory(
+                  barangay.barangay,
+                  'N',
+                  barangay.normal
+                )
+              "
+            >
+              {{ barangay.normal }}
+            </td>
+            <td
+              (click)="
+                showDetailedInfoByCategory(
+                  barangay.barangay,
+                  'O',
+                  barangay.obese
+                )
+              "
+            >
+              {{ barangay.obese }}
+            </td>
           </tr>
         </tbody>
       </table>
+      <div class="modal" *ngIf="showModal">
+        <div class="modal-content">
+          <span (click)="closeModal()">&times;</span>
+          <div *ngIf="selectedBarangayInfo.length > 0">
+            <table>
+              <thead>
+                <tr>
+                  <th>First Name</th>
+                  <th>Last Name</th>
+                  <th>Weight</th>
+                  <th>Result</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let info of selectedBarangayInfo">
+                  <td>{{ info.nameOfChild.firstName }}</td>
+                  <td>{{ info.nameOfChild.lastName }}</td>
+                  <td>{{ info.weight }}</td>
+                  <td>{{ info.weightForAge }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     </section>
   </fieldset>
 </div>
